--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
     <application
         android:name="edu.aku.hassannaqvi.kmc.core.MainApp"
         android:allowBackup="true"
-        android:icon="@drawable/toic"
+        android:icon="@drawable/kmc_logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
