--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
     <application
         android:name=".core.MainApp"
         android:allowBackup="true"
-        android:icon="@drawable/kmc_logo"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -72,7 +72,9 @@
         <activity android:name=".ui.SectionE1Activity" />
         <activity android:name=".ui.SectionE2Activity" />
         <activity android:name=".ui.SectionE3Activity" />
-        <activity android:name=".ui.SectionFActivity"></activity>
+        <activity android:name=".ui.SectionFActivity" />
+        <activity android:name=".ui.SectionD2Activity$SectionE4Activity" />
+        <activity android:name=".ui.SectionE4Activity"></activity>
     </application>
 
 </manifest>
