--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -107,8 +107,14 @@
             android:name=".ui.SectionFActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme1" />
-        <activity android:name=".ui.SectionEActivity" />
-        <activity android:name=".ui.SectionInfoKmcActivity"></activity>
+        <activity
+            android:name=".ui.SectionEActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme1" />
+        <activity
+            android:name=".ui.SectionInfoKmcActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme1" />
     </application>
 
 </manifest>
