--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="edu.aku.hassannaqvi.kmc">
 
+    <permission android:name="edu.aku.hassannaqvi.kmc.provider.READWRITE" />
+
+    <uses-permission android:name="edu.aku.hassannaqvi.kmc.provider.READWRITE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <!-- Needed only if your app targets Android 5.0 (API level 21) or higher. -->
     <uses-feature android:name="android.hardware.location.gps" />
@@ -110,6 +113,13 @@
             android:name=".ui.SectionInfoKmcActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme1" />
+
+        <provider
+            android:name="edu.aku.hassannaqvi.kmc.core.MainContentProvider"
+            android:authorities="edu.aku.hassannaqvi.kmc.provider"
+            android:exported="true"
+            android:readPermission="edu.aku.hassannaqvi.kmc.provider.READWRITE"
+            android:writePermission="edu.aku.hassannaqvi.kmc.provider.READWRITE" />
     </application>
 
 </manifest>
