--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion '27.0.3'
     def versionPropsFile = file('version.properties')
     dataBinding {
         enabled = true
@@ -24,7 +23,7 @@ android {
             targetSdkVersion 22
 
             versionCode code
-            versionName "0.0"
+            versionName "0.9"
             testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         }
     } else {
@@ -44,13 +43,13 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     implementation 'com.jakewharton:butterknife:8.8.1'
-    implementation 'com.android.support:recyclerview-v7:27.0.2'
-    implementation 'com.android.support:appcompat-v7:27.0.2'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.github.BlackBoxVision:datetimepicker-edittext:v0.3.3'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     testImplementation 'junit:junit:4.12'
     implementation 'com.github.amlcurran.showcaseview:library:5.4.3'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-
+    implementation 'com.android.support:design:27.1.1'
     implementation 'com.intuit.sdp:sdp-android:1.0.5'
 }
