--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,14 +23,14 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.SectionF_form3"></activity>
-        <activity android:name=".ui.SectionE_form3" />
-        <activity android:name=".ui.SectionD_form3" />
-        <activity android:name=".ui.SectionC_form3" />
-        <activity android:name=".ui.SectionB_form3" />
-        <activity android:name=".ui.SectionA_form3" />
+        <activity android:name=".ui.form3.SectionFForm3Activity"></activity>
+        <activity android:name=".ui.form3.SectionEForm3Activity" />
+        <activity android:name=".ui.form3.SectionDForm3Activity" />
+        <activity android:name=".ui.form3.SectionCForm3Activity" />
+        <activity android:name=".ui.form3.SectionBForm3Activity" />
+        <activity android:name=".ui.form3.SectionAForm3Activity" />
         <activity
-            android:name=".ui.SplashscreenActivity"
+            android:name=".ui.other.SplashscreenActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -39,12 +39,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.LoginActivity"
+            android:name=".ui.other.LoginActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.NoActionBar"
             android:windowSoftInputMode="stateVisible|adjustPan" />
         <activity
-            android:name=".ui.MainActivity"
+            android:name=".ui.other.MainActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize|stateHidden" />
         <activity
@@ -52,7 +52,7 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize|stateHidden" />
         <activity
-            android:name=".ui.EndingActivity"
+            android:name=".ui.other.EndingActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme1"
             android:windowSoftInputMode="adjustResize|stateHidden" />
@@ -65,7 +65,7 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme1" />
         <activity
-            android:name=".ui.SectionForm1Activity"
+            android:name=".ui.form1.SectionAForm1Activity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme1" />
     </application>
