--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,12 +23,30 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.form3.SectionFForm3Activity"></activity>
-        <activity android:name=".ui.form3.SectionEForm3Activity" />
-        <activity android:name=".ui.form3.SectionDForm3Activity" />
-        <activity android:name=".ui.form3.SectionCForm3Activity" />
-        <activity android:name=".ui.form3.SectionBForm3Activity" />
-        <activity android:name=".ui.form3.SectionAForm3Activity" />
+        <activity
+            android:name=".ui.form3.SectionFForm3Activity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme1" />
+        <activity
+            android:name=".ui.form3.SectionEForm3Activity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme1" />
+        <activity
+            android:name=".ui.form3.SectionDForm3Activity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme1" />
+        <activity
+            android:name=".ui.form3.SectionCForm3Activity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme1" />
+        <activity
+            android:name=".ui.form3.SectionBForm3Activity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme1" />
+        <activity
+            android:name=".ui.form3.SectionAForm3Activity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme1" />
         <activity
             android:name=".ui.other.SplashscreenActivity"
             android:screenOrientation="portrait">
@@ -58,6 +76,10 @@
             android:windowSoftInputMode="adjustResize|stateHidden" />
         <activity
             android:name=".ui.SectionA1Activity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme1" />
+        <activity
+            android:name=".ui.form0.SectionAForm0Activity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme1" />
         <activity
