--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,5 @@ dependencies {
     implementation 'com.github.amlcurran.showcaseview:library:5.4.3'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'com.intuit.sdp:sdp-android:1.0.5'
+    implementation 'com.nabinbhandari.android:permissions:3.8'
 }
