--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,8 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'com.intuit.sdp:sdp-android:1.0.5'
     implementation 'com.nabinbhandari.android:permissions:3.8'
+
+    implementation 'com.github.Shashank02051997:FancyToast-Android:0.1.3'
+    //Edittext-library
+    implementation 'com.github.AliAzaz:Edittext-Library:0.0.8'
 }
