--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,5 +59,7 @@ dependencies {
 
     implementation 'com.github.Shashank02051997:FancyToast-Android:0.1.3'
     //Edittext-library
-    implementation 'com.github.AliAzaz:Edittext-Library:0.0.8'
+    implementation 'com.github.AliAzaz:Edittext-Library:1.0.1'
+
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
