--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,9 +63,7 @@
         <activity
             android:name=".ui.form1.SectionAForm1Activity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme1">
-
-        </activity>
+            android:theme="@style/AppTheme1" />
         <activity
             android:name=".ui.form2.SectionBForm2Activity"
             android:screenOrientation="portrait"
