--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,8 @@ android {
             targetSdkVersion 28
 
             versionCode code
-            versionName "2.5"
+            //versionName "2.5"
+            versionName "0.5"
             testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         }
     } else {
