--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
     def versionPropsFile = file('version.properties')
     dataBinding {
         enabled = true
@@ -20,12 +20,16 @@ android {
         defaultConfig {
             applicationId "edu.aku.hassannaqvi.kmc_screening"
             minSdkVersion 22
-            targetSdkVersion 28
+            targetSdkVersion 29
 
             versionCode code
-            //versionName "2.5"
-            versionName "0.6"
+            //versionName "2.7"
+            versionName "2.7"
             testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        }
+        compileOptions {
+            sourceCompatibility JavaVersion.VERSION_1_8
+            targetCompatibility JavaVersion.VERSION_1_8
         }
     } else {
         throw new GradleException("Could not read version.properties!")
@@ -41,27 +45,27 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.android.support:support-v4:28.0.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    testImplementation 'junit:junit:4.13'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    implementation 'com.jakewharton:butterknife:8.8.1'
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.jakewharton:butterknife:10.2.1'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
     //datepicker
     implementation 'com.github.BlackBoxVision:datetimepicker-edittext:v0.4.0'
 
     implementation 'com.github.amlcurran.showcaseview:library:5.4.3'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
     implementation 'com.intuit.sdp:sdp-android:1.0.5'
     implementation 'com.nabinbhandari.android:permissions:3.8'
 
-    implementation 'com.github.Shashank02051997:FancyToast-Android:0.1.3'
-    //Edittext-library
-    implementation 'com.github.AliAzaz:Edittext-Library:1.0.1'
+    implementation 'com.github.Shashank02051997:FancyToast-Android:0.1.6'
+    // Edittext-library
+    implementation 'com.github.AliAzaz:Edittext-Library:2.0.0'
 
-    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
