--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 30
     def versionPropsFile = file('version.properties')
-    dataBinding {
-        enabled = true
+    buildFeatures {
+        dataBinding true
     }
-
     if (versionPropsFile.canRead()) {
         Properties versionProps = new Properties()
 
@@ -20,8 +19,7 @@ android {
         defaultConfig {
             applicationId "edu.aku.hassannaqvi.kmc_screening"
             minSdkVersion 22
-            targetSdkVersion 29
-
+            targetSdkVersion 30
             versionCode code
             versionName "2.8"
             testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -44,8 +42,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.google.android.material:material:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13'
