--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,31 +45,33 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-
-    implementation 'com.jakewharton:butterknife:10.2.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    //Butterknife
+    implementation 'com.jakewharton:butterknife:10.2.3'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    //datepicker
+    //Datepicker
     implementation 'com.github.BlackBoxVision:datetimepicker-edittext:v0.4.0'
-
+    //Showcase
     implementation 'com.github.amlcurran.showcaseview:library:5.4.3'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
     implementation 'com.intuit.sdp:sdp-android:1.0.5'
     implementation 'com.nabinbhandari.android:permissions:3.8'
-
+    //Fancy Toast
     implementation 'com.github.Shashank02051997:FancyToast-Android:0.1.6'
-
     //Ali Mask
     implementation 'com.github.AliAzaz:Edittext-Library:2.0.0'
     implementation 'com.github.AliAzaz:AndroidValidatorCrawler:1.0.3'
-
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
-
+    //Gson
     implementation 'com.google.code.gson:gson:2.8.6'
+    //RxJava
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation "io.reactivex.rxjava3:rxjava:3.0.3"
+    implementation 'com.jakewharton.rxbinding3:rxbinding:3.1.0'
 }
