--- a/app/version.properties
+++ b/app/version.properties
@@ -1,2 +1,4 @@
-#Tue Feb 16 11:46:25 PKT 2021
-VERSION_CODE=1090
+#Sat Oct 23 15:10:59 PKT 2021
+VERSION_BUILD=1147
+VERSION_NUMBER=2
+VERSION_PATCH=23
