--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,32 +2,79 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 30
-    def versionPropsFile = file('version.properties')
     buildFeatures {
         dataBinding true
     }
+    Properties versionProps = new Properties()
+    def versionPropsFile = file('version.properties')
+
+    //Create a version properties file and add required properties with default values
+    if (!versionPropsFile.exists()) {
+        versionProps['VERSION_PATCH'] = "0"
+        versionProps['VERSION_BUILD'] = "0"
+        versionProps['VERSION_NUMBER'] = "0"
+
+        Writer writer = new FileWriter(versionPropsFile, false)
+        versionProps.store(versionPropsFile.newWriter(), null)
+    }
+
+    // Read existing
     if (versionPropsFile.canRead()) {
-        Properties versionProps = new Properties()
+        versionProps = new Properties()
 
         versionProps.load(new FileInputStream(versionPropsFile))
 
-        def code = versionProps['VERSION_CODE'].toInteger() + 1
+        def value = 0
+        def versionType = "D"
 
-        versionProps['VERSION_CODE'] = code.toString()
+
+        def runTasks = gradle.startParameter.taskNames
+        if ('assemble' in runTasks || ':app:assembleRelease' in runTasks || 'aR' in runTasks) {
+            value = 1
+            versionType = "R"
+        }
+
+        def versionNumber = versionProps['VERSION_NUMBER'].toInteger()
+        //  def versionMinor = 0
+        def versionPatch = versionProps['VERSION_PATCH'].toInteger() + value
+        def versionBuild = versionProps['VERSION_BUILD'].toInteger() + 1
+        //def versionNumber = versionProps['VERSION_NUMBER'].toInteger() + value
+
+        versionProps['VERSION_PATCH'] = versionPatch.toString()
+        versionProps['VERSION_BUILD'] = versionBuild.toString()
+        versionProps['VERSION_NUMBER'] = versionNumber.toString()
+
         versionProps.store(versionPropsFile.newWriter(), null)
 
         defaultConfig {
             applicationId "edu.aku.hassannaqvi.kmc_screening"
+            versionCode versionBuild
+            versionName "${versionNumber}.${versionPatch}${versionType}"
             minSdkVersion 22
-            targetSdkVersion 30
-            versionCode code
-            versionName "2.23"
-            testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+            targetSdkVersion 29
         }
-        compileOptions {
-            sourceCompatibility JavaVersion.VERSION_1_8
-            targetCompatibility JavaVersion.VERSION_1_8
+
+        applicationVariants.all { variant ->
+            variant.outputs.each { output ->
+
+                def appName = rootProject.name
+                def date = new Date()
+                def formattedDate = date.format('yyyy_MM_dd')
+
+                def outputDir = new File("${project.buildDir.absolutePath}/outputs/apk/${variant.flavorName}/${variant.buildType.name}")
+                //def outputFileName = "app-${variant.flavorName}-${variant.buildType.name}.apk"
+                def outputFileName = "${appName}_${formattedDate}_${versionType}v${versionBuild}.apk"
+                // def outputFile = new File("$outputDir/$outputFileName")
+                variant.packageApplicationProvider.get().outputDirectory = new File("$outputDir")
+                output.outputFileName = outputFileName
+                /*  if (outputFileName != null && outputFileName.endsWith('.apk')) {
+                      //output.outputFileName = outputFileName
+                      output.outputFileName = new File("${project.buildDir.absolutePath}/outputs/apk/", "${outputDir}-${versionMajor}.${versionMinor}.${versionPatch}-${outputFileName}")
+                  }*/
+
+            }
         }
+
     } else {
         throw new GradleException("Could not read version.properties!")
     }
@@ -37,27 +84,33 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    buildToolsVersion '30.0.3'
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     //Butterknife
     implementation 'com.jakewharton:butterknife:10.2.3'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     //Datepicker
     implementation 'com.github.BlackBoxVision:datetimepicker-edittext:v0.4.0'
     //Showcase
     implementation 'com.github.amlcurran.showcaseview:library:5.4.3'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
-    implementation 'com.intuit.sdp:sdp-android:1.0.5'
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
     implementation 'com.nabinbhandari.android:permissions:3.8'
     //Fancy Toast
     implementation 'com.github.Shashank02051997:FancyToast-Android:0.1.6'
@@ -65,12 +118,12 @@ dependencies {
     implementation 'com.github.AliAzaz:Edittext-Library:2.0.0'
     implementation 'com.github.AliAzaz:AndroidValidatorCrawler:1.0.3'
     //Glide
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     //Gson
-    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.code.gson:gson:2.8.8'
     //RxJava
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
-    implementation "io.reactivex.rxjava3:rxjava:3.0.3"
+    implementation "io.reactivex.rxjava3:rxjava:3.1.2"
     implementation 'com.jakewharton.rxbinding3:rxbinding:3.1.0'
 }
