--- a/build.gradle
+++ b/build.gradle
@@ -4,20 +4,27 @@ buildscript {
     
     repositories {
         google()
+        mavenCentral()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.1'
-        
+        classpath 'com.android.tools.build:gradle:7.0.3'
+        classpath 'com.netflix.nebula:gradle-lint-plugin:latest.release'
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
-
+plugins {
+    id 'nebula.lint' version '17.2.3'
+}
 allprojects {
+    apply plugin: 'nebula.lint'
+
     repositories {
         google()
+        mavenCentral()
         jcenter()
         maven { url "https://jitpack.io" }
 
@@ -27,3 +34,4 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
